@@ -32,6 +32,3 @@ delete:
   
 show:
   credentials:  show_membre
-  
-acl:
-  credentials:  acl
